--- a/P9KGT/.antigenrc
+++ b/P9KGT/.antigenrc
@@ -1,4 +1,5 @@
 # Set username to consider a "default context", which by default will not be shown.
+# https://github.com/bhilburn/powerlevel9k/blob/next/segments/context/README.md
 DEFAULT_USER='luca'
 
 # Set P9KGT background color, either 'light', 'dark' or 'dark-terminator' (this should match your terminal theme).
@@ -18,7 +19,7 @@ then
 fi
 
 # Set P9KGT fonts mode, either 'default', 'awesome-fontconfig', 'awesome-mapped-fontconfig', 'awesome-patched', 'nerdfont-complete' or 'nerdfont-fontconfig'.
-# See: https://github.com/bhilburn/powerlevel9k/wiki/About-Fonts
+# https://github.com/bhilburn/powerlevel9k/wiki/About-Fonts
 P9KGT_FONTS='awesome-fontconfig'
 if [[ $P9KGT_FONTS != 'default' ]] && [[ $P9KGT_FONTS != 'awesome-fontconfig' ]] && [[ $P9KGT_FONTS != 'awesome-mapped-fontconfig' ]] &&
     [[ $P9KGT_FONTS != 'awesome-patched' ]] && [[ $P9KGT_FONTS != 'nerdfont-complete' ]] && [[ $P9KGT_FONTS != 'nerdfont-fontconfig' ]]
@@ -35,6 +36,7 @@ then
     # Set P9KGT background color
     if [[ $P9KGT_BACKGROUND == 'light' ]]
     then
+        # https://github.com/bhilburn/powerlevel9k/wiki/Stylizing-Your-Prompt#light-color-theme
         P9K_COLOR_SCHEME='light'
         P9KGT_TERMINAL_BACKGROUND='grey100'
     elif [[ $P9KGT_BACKGROUND == 'dark' ]]
@@ -68,12 +70,15 @@ then
         P9KGT_BLUE='steelblue1'
     fi
 
-    # Customize prompt.
+    # Customize prompt
+    # https://github.com/bhilburn/powerlevel9k/wiki/Stylizing-Your-Prompt#adding-newline-before-each-prompt
     P9K_PROMPT_ADD_NEWLINE=true
+    # https://github.com/bhilburn/powerlevel9k/tree/next#customizing-prompt-segments
     P9K_LEFT_PROMPT_ELEMENTS=(context dir_writable dir vcs)
     P9K_RIGHT_PROMPT_ELEMENTS=(status root_indicator background_jobs)
 
-    # Set 'context' segment colors.
+    # Set 'context' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/context/README.md
     P9K_CONTEXT_DEFAULT_FOREGROUND=$P9KGT_YELLOW
     P9K_CONTEXT_ROOT_FOREGROUND=$P9KGT_YELLOW
     P9K_CONTEXT_SUDO_FOREGROUND=$P9KGT_YELLOW
@@ -85,11 +90,13 @@ then
     P9K_CONTEXT_REMOTE_BACKGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_CONTEXT_REMOTE_SUDO_BACKGROUND=$P9KGT_TERMINAL_BACKGROUND
 
-    # Set 'dir_writable' segment colors.
+    # Set 'dir_writable' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/dir_writable/README.md
     P9K_DIR_WRITABLE_FORBIDDEN_FOREGROUND=$P9KGT_YELLOW
     P9K_DIR_WRITABLE_FORBIDDEN_BACKGROUND=$P9KGT_RED
 
-    # Set 'dir' segment colors.
+    # Set 'dir' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/dir/README.md
     P9K_DIR_DEFAULT_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_DIR_HOME_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_DIR_HOME_SUBFOLDER_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
@@ -99,7 +106,8 @@ then
     P9K_DIR_HOME_SUBFOLDER_BACKGROUND=$P9KGT_BLUE
     P9K_DIR_ETC_BACKGROUND=$P9KGT_BLUE
 
-    # Set 'vcs' segment colors.
+    # Set 'vcs' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/vcs/README.md
     P9K_VCS_CLEAN_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_VCS_MODIFIED_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_VCS_CLOBBERED_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
@@ -109,46 +117,61 @@ then
     P9K_VCS_CLOBBERED_BACKGROUND=$P9KGT_RED
     P9K_VCS_UNTRACKED_BACKGROUND=$P9KGT_GREEN
 
-    # Set 'status' segment colors.
+    # Set 'status' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/status/README.md
     P9K_STATUS_CROSS=true
     P9K_STATUS_OK_FOREGROUND=$P9KGT_GREEN
     P9K_STATUS_ERROR_FOREGROUND=$P9KGT_RED
     P9K_STATUS_OK_BACKGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_STATUS_ERROR_BACKGROUND=$P9KGT_TERMINAL_BACKGROUND
 
-    # Set 'root_indicator' segment colors.
+    # Set 'root_indicator' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/root_indicator/README.md
     P9K_ROOT_INDICATOR_FOREGROUND=$P9KGT_YELLOW
     P9K_ROOT_INDICATOR_BACKGROUND=$P9KGT_TERMINAL_BACKGROUND
 
-    # Set 'background_jobs' segment colors.
+    # Set 'background_jobs' segment colors
+    # https://github.com/bhilburn/powerlevel9k/blob/next/segments/background_jobs/README.md
     P9K_BACKGROUND_JOBS_FOREGROUND=$P9KGT_TERMINAL_BACKGROUND
     P9K_BACKGROUND_JOBS_BACKGROUND=$P9KGT_YELLOW
 
 fi
 
+# https://github.com/bhilburn/powerlevel9k/blob/next/INSTALL.md#option-4-install-for-antigen
 P9K_INSTALLATION_PATH=$ANTIGEN_BUNDLES/bhilburn/powerlevel9k
 antigen theme bhilburn/powerlevel9k powerlevel9k --branch=next
 
+# https://github.com/zsh-users/antigen/wiki/Commands#oh-my-zsh
 antigen use oh-my-zsh
 
+# https://github.com/zsh-users/antigen/wiki/Commands#antigen-bundles
 antigen bundles <<EOBUNDLES
 
     # oh-my-zsh plugins
+    # https://github.com/robbyrussell/oh-my-zsh#plugins
     colored-man-pages
     dirhistory
     sudo
     z
 
     # other plugins
+    # https://github.com/andrewferrier/fzf-z
     andrewferrier/fzf-z
+    # https://github.com/MichaelAquilina/zsh-you-should-use
     MichaelAquilina/zsh-you-should-use
+    # https://github.com/zsh-users/zsh-autosuggestions
     zsh-users/zsh-autosuggestions
+    # https://github.com/zsh-users/zsh-completions
     zsh-users/zsh-completions
+    # https://github.com/zsh-users/zsh-syntax-highlighting
     #zsh-users/zsh-syntax-highlighting
+    # https://github.com/zdharma/fast-syntax-highlighting
     zdharma/fast-syntax-highlighting
+    # https://github.com/zsh-users/zsh-history-substring-search
     zsh-users/zsh-history-substring-search
 
 EOBUNDLES
 
+# https://github.com/zsh-users/antigen/wiki/Commands#antigen-apply
 antigen apply
 
