--- a/P9KGT/.antigenrc
+++ b/P9KGT/.antigenrc
@@ -1,4 +1,4 @@
-# Set username to consider a "default context", which by default will not be shown.
+# Set username to consider a default context, which by default will not be shown.
 # https://github.com/bhilburn/powerlevel9k/blob/next/segments/context/README.md
 DEFAULT_USER='luca'
 
